@@ -1,6 +1,6 @@
 ### NOTE: SETTABLE_CONFIG
-INSTALL_LOCATION ?= ../buildroot-2014.08-glibc-x86_64
+INSTALL_LOCATION ?= ../../buildroot-2014.08-glibc-x86_64
 
-include ../src/Makefile.common
+include ../../src/Makefile.common
 
 
