@@ -6,7 +6,7 @@ BUILDROOT_X86_HOME=/afs/slac/g/lcls/package/linuxRT/buildroot-2014.11
 XCROSS_HOME=$(BUILDROOT_X86_HOME)/host/$(EPICS_HOST_ARCH)/x86_64-glibc-linux/usr/bin/x86_64-linux-
 
 
-include ../src/test/Makefile.common
+include ../../src/test/Makefile.common
 
 
 
