@@ -6,6 +6,7 @@ R1.0.7:  Feb. 7, 2017, Ernest Williams (ernesto)
          * Fix Makefile to use correct compiler:
            Define "CXX" instead of "CC"
          * Make changes to support the new GCC 5.4
+         * Build against kernel API, evrmaDriver version R1.0.7
 
 evrma-R1-0-p6: 2016-04-19 K. Kim
 	* add Temperature monitor for SLAC-EVR
